working on creating models

--- a/tt-server/server/templates/index.html
+++ b/tt-server/server/templates/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Models:</h1>
 
-    <a href="/dashboard/addmodel"></a>
+    <a href="/dashboard/createmodel">Create Model</a>
     {% for location in locations %}
     <div>
       <p>id: {{ location.id }}</p>
