--- a/tt-server/server/templates/index.html
+++ b/tt-server/server/templates/index.html
@@ -12,13 +12,12 @@
     <a href="/dashboard/createmodel">Create Model</a>
     {% for location in locations %}
     <div>
+      <h2>{{ location.name }}</h2>
+      <h4>{{ location.description}}</h4>
       <p>id: {{ location.id }}</p>
-      <p>name: {{ location.name }}</p>
-      <p>geometry: {{ location.geometry }}</p>
-      <p>latitude: {{ location.latitude }}</p>
-      <p>longitude: {{ location.longitude }}</p>
-      <p>description: {{ location.description }}</p>
+      <p>lat, long: ({{ location.latitude }},{{ location.longitude }})</p>
       <p>last_updated: {{ location.last_updated }}</p>
+      <p>geometry: {{ location.geometry }}</p>
     </div>
     {% endfor %}
   </body>
