--- a/tt-server/server/static/css/gallery.css
+++ b/tt-server/server/static/css/gallery.css
@@ -2,29 +2,24 @@
   -webkit-column-count: 5;
   -webkit-column-gap: 5px;
   -moz-column-count: 5;
-  -moz-column-gap: 5px;
+  -moz-column-gap: 10px;
   column-count: 5;
-  column-gap: 5px;
+  column-gap: 10px;
   margin-top: 2rem;
+  line-height: 0;
 }
 
 figure {
   width: 100% !important;
   height: auto !important;
-  margin: 0;
+  margin: 5px 0;
   padding: 0;
-  margin-bottom: 15px;
   display: inline-block;
-}
-
-figure:hover {
-  border: 1px solid #777;
 }
 
 figure img {
   width: 100%;
   height: auto;
-  margin-bottom: 5px;
 }
 
 figcaption {
@@ -62,3 +57,54 @@ figcaption {
     column-count: 1;
   }
 }
+
+* {
+  --transition: 0.15s;
+  --border-radius: 0;
+  --background: #ffc107;
+  --box-shadow: #ffc107;
+}
+
+.cont-checkbox {
+  border-radius: var(--border-radius);
+  background: white;
+  transition: transform var(--transition);
+}
+
+.cont-checkbox:active {
+  transform: scale(0.9);
+}
+
+input[type=checkbox] {
+  display: none;
+}
+
+input:checked + label {
+  opacity: 1;
+  box-shadow: 0 0 0 3px var(--background);
+}
+
+input:checked + label img {
+  -webkit-filter: none; /* Safari 6.0 - 9.0 */
+  filter: none;
+}
+
+label {
+  display: inline-block;
+  cursor: pointer;
+  border-radius: var(--border-radius);
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  position: relative;
+  opacity: 0.6;
+}
+
+label img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
+}
+
