--- a/tt-server/server/templates/createmodel.html
+++ b/tt-server/server/templates/createmodel.html
@@ -14,8 +14,8 @@
     <form action="/dashboard/createmodel" method="POST">
       Name: <input type="text" name="name" required><br>
       Description: <input type="text" name="description" required><br>
-      Latitude: <input type="number" name="latitude" min="0" max="180" required><br>
-      Longitude: <input type="number" name="longitude" min="0" max="180" required><br>
+      Latitude: <input type="text" name="latitude" required><br>
+      Longitude: <input type="text" name="longitude" required><br>
       <input type="submit" name="create" value="Create">
     </form>
     <p>{{ msg }}</p>
