--- a/tt-server/server/templates/addmedia.html
+++ b/tt-server/server/templates/addmedia.html
@@ -26,7 +26,7 @@
       <h3>Flickr Query</h3>
       <p>Populate model using images from Flickr.</p>
       Lat: <input type="text" name="flickr_latitude" value="{% if query_results %}{{ query_results.latitude }}{% else %}{{ location.latitude }}{% endif %}">
-      Lon: <input type="text" name="flickr_longitude" value="{% if query_results %}{{ query_results.longitude }}{% else %}{{ location.latitude }}{% endif %}">
+      Lon: <input type="text" name="flickr_longitude" value="{% if query_results %}{{ query_results.longitude }}{% else %}{{ location.longitude }}{% endif %}">
       Radius (miles): <input type="text" name="flickr_radius" value="{% if query_results %}{{ query_results.radius }}{% else %}0.5{% endif %}">
       Tags (csv): <input type="text" name="flickr_tag" value ="{% if query_results %}{{ query_results.tag }}{% endif %}">
       <input type="submit" name="query" value="Query">
