--- a/tt-server/server/templates/index.html
+++ b/tt-server/server/templates/index.html
@@ -19,6 +19,7 @@
       <p>last_updated: {{ location.last_updated }}</p>
       <p>geometry: {{ location.geometry }}</p>
       <a href="/dashboard/addmedia/{{location.id}}">Add media</a>
+      <a href="/dashboard/generatemodel/{{location.id}}">Generate model</a>
       <hr>
     </div>
     {% endfor %}
