prepping updatemodel dashboard endpoint

--- a/tt-server/server/templates/index.html
+++ b/tt-server/server/templates/index.html
@@ -19,7 +19,7 @@
       <p>last_updated: {{ location.last_updated }}</p>
       <p>geometry: {{ location.geometry }}</p>
       <a href="/dashboard/addmedia/{{location.id}}">Add media</a>
-      <a href="/dashboard/generatemodel/{{location.id}}">Generate model</a>
+      <a href="/dashboard/updatemodel/{{location.id}}">Update model</a>
       <hr>
     </div>
     {% endfor %}
