colmap container in kubernetes cluster working

--- a/tt-server/server/templates/index.html
+++ b/tt-server/server/templates/index.html
@@ -10,6 +10,7 @@
     <h1>Models:</h1>
 
     <a href="/dashboard/createmodel">Create Model</a>
+    <a href="/dashboard/colmapjobqueue">Colmap Job Queue</a>
     {% for location in locations %}
     <div>
       <h2>{{ location.name }}</h2>
