--- a/tt-server/server/templates/updatemodel.html
+++ b/tt-server/server/templates/updatemodel.html
@@ -10,24 +10,24 @@
 
   <body>
     <h1>Update Model</h1>
-    {{msg}}
+    <p>{{msg}}</p>
     {% if files %}
-      {{ files.raw_img_path }}
+      <p>{{ files.raw_img_path }}</p>
 
       {% for img in files.raw_imgs %}
-        {{ img }}
+        <p>{{ img }}</p>
       {% endfor %}
 
-      {{ files.raw_vid_path }}
+      <p>{{ files.raw_vid_path }}</p>
 
       {% for vid in files.raw_vids %}
-        {{ vid }}
+        <p>{{ vid }}</p>
       {% endfor %}
     {% endif %}
 
-    <form action="/dashboard/updatemodel" method="POST">
-      <input type="submit" name="update" value="Update">
-      <input type="submit" name="check_status" value="Check Status">
+    <form action="/dashboard/updatemodel/{{location_id}}" method="POST">
+      <input type="submit" name="update-point-cloud" value="Update Point Cloud">
+      <input type="submit" name="update-mesh" value="Update Mesh">
     </form>
     <p>{{ msg }}</p>
     <a href="/dashboard">Return to dashboard</a>
