--- a/tt-server/server/templates/updatemodel.html
+++ b/tt-server/server/templates/updatemodel.html
@@ -26,6 +26,15 @@
     {% endif %}
 
     <form action="/dashboard/updatemodel/{{location_id}}" method="POST">
+      Name: <input type="text" name="name" value="{{model.name}}" required><br>
+      Description: <input type="text" name="description" value="{{model.description}}" required><br>
+      Latitude: <input type="text" name="latitude" value="{{model.latitude}}" required><br>
+      Longitude: <input type="text" name="longitude" value="{{model.longitude}}" required><br>
+      <input type="submit" name="update-info" value="Update Info">
+    </form>
+
+
+    <form action="/dashboard/updatemodel/{{location_id}}" method="POST">
       <input type="submit" name="update-point-cloud" value="Update Point Cloud">
       <input type="submit" name="update-mesh" value="Update Mesh">
     </form>
