--- a/tt-server/server/templates/updatemodel.html
+++ b/tt-server/server/templates/updatemodel.html
@@ -30,6 +30,7 @@
       Description: <input type="text" name="description" value="{{model.description}}" required><br>
       Latitude: <input type="text" name="latitude" value="{{model.latitude}}" required><br>
       Longitude: <input type="text" name="longitude" value="{{model.longitude}}" required><br>
+      Thumbnail URL: <input type="text" name="url" required><br>
       <input type="submit" name="update-info" value="Update Info">
     </form>
 
